# PyConsoleIOTools

./: .travis.yml  README.md  consoleiotools.py  printtools.py  publish.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py
consoleiotools/: __init__.py  __main__.py
tests/: FakeIn.py  FakeOs.py  FakeOut.py  ansiesc.py  test_consoleiotools.py
