[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consoleiotools"
description = "Some console tools for inputs and outputs"
requires-python = ">=3.7"
keywords = ["console", "input", "output", "tool"]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["rich"]
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = ["build", "wheel", "pycodestyle"]

[tool.setuptools]
packages = ["consoleiotools"]

[tool.setuptools.dynamic]
version = {attr = "consoleiotools.__version__"}
readme = {file = "README.md"}
