[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consoleiotools"
description = "Some console tools for inputs and outputs"
requires-python = ">=3.6"
authors = [{name = "Kyan"}]
readme = "README.md"
keywords = ["console", "input", "output", "tool"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["rich"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["build", "wheel", "pycodestyle"]

[project.urls]
homepage = "https://github.com/kyan001/PyConsoleIOTools"

[tool.setuptools]
py-modules = ["consoleiotools"]

[tool.setuptools.dynamic]
version = {attr = "consoleiotools.__version__"}

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]
